--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Patrik Sjöberg
-description: - IT consultant
+title: "Patrik Sjöberg"
+description: "IT consultant"
 show_downloads: false
-google_analytics: UA-2371782-1
+google_analytics: "UA-2371782-1"
